--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "ext-mysqli": "*"
   },
   "require-dev": {
   },
