--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require": {
     "php": ">=7.1.0",
     "ext-gd": "*",
-    "ext-mysqli": "*"
+    "ext-pdo": "*"
   },
   "require-dev": {
   },
